# django_jinja_first_project

./: Makefile  pyproject.toml  requirements.txt
apps/: __init__.py  admin.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_review.py  0003_emailverify.py  0004_remove_product_check_product_price.py
root/: settings.py  urls.py
templates/apps/: checkout.html  shopping_cart.html  test_detail_page.html  test_list_page.html  verify.html
templates/auth/: login.html  register.html
